--- a/templates/header.html
+++ b/templates/header.html
@@ -2,10 +2,28 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Tunnel Vision</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
-        <div id="content">{% block content %}</div>
+        <nav class="navbar bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">
+                    <img style="height: 50px" src="https://wmcda.de/static/assets/images/wilson.jpg">
+                    Tunnel Vision
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="navbar-nav">
+                            <a class="nav-link" href="/">Home</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <div id="content">{% block content %} {% endblock %}</div>
+        <p><a href="https://github.com/wilsonmcdade/tunnelvision">Find this project on Github</a></p>
     </body>
 
 </html>
