--- a/templates/home.html
+++ b/templates/home.html
@@ -2,4 +2,17 @@
 
 <p>Home</p>
 
+<div class="container text-center">
+    <div class="row row-cols-2">
+    {% for mural in murals: %}
+    <a href="murals/{{ mural['id'] }}">
+        <div class="col">
+            <img style="width:150px" src="{{ mural['imageurl'] }}">
+            <p>{{ mural['title'] }}</p>
+        </div>
+    </a>
+    {% endfor %}
+    </div>
+</div>
+
 {% endblock %}
