--- a/templates/header.html
+++ b/templates/header.html
@@ -6,25 +6,29 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
-        <nav class="navbar bg-body-tertiary">
+        <nav class="navbar bg-body-secondary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">
                     <img style="height: 50px" src="https://wmcda.de/static/assets/images/wilson.jpg">
                     Tunnel Vision
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <div class="navbar-nav">
-                            <a class="nav-link" href="/">Home</a>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">              
+                        <a class="nav-link" href="/">Home</a>
                     </div>
                 </div>
             </div>
         </nav>
-        <div id="content">{% block content %} {% endblock %}</div>
-        <p><a href="https://github.com/wilsonmcdade/tunnelvision">Find this project on Github</a></p>
+        <div class="container-lg center mt-4">{% block content %} {% endblock %}</div>
+        <div class="text-center">
+            <p><a href="https://github.com/wilsonmcdade/tunnelvision">Find this project on Github</a></p>
+        </div>
     </body>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </html>
 
