--- a/templates/mural.html
+++ b/templates/mural.html
@@ -1,25 +1,36 @@
 {% extends "header.html" %} {% block content %}
 
-<a href="/"><p>Back</p></a>
-<p>Mural</p>
+<div class="container">
+    <h1>{{ muralDetails["title"] }} </h1>
+    <div class="row">
+        <div class="col-8">
+            <img style="height: 150px" src="{{ muralDetails['imageurl'] }}">
+        </div>
+        <div class="col-4">
+            <h3>Notes:</h3>
+            <p>{{ muralDetails["notes"] }} </p>
+            <h3>Year:</h3>
+            <p>{{ muralDetails["year"] }} </p>
+            <h3>Location:</h3>
+            <p>{{ muralDetails["location"] }} </p>
+            
+            {% if muralDetails["artists"]|length > 0: %}
+            <h3>Artists:</h3>
+            <ul>
+            {% for artist in muralDetails["artists"]: %}
+            <li><a href="/artist/{{ artist['id'] }}">{{artist["name"]}}</a></li>
+            {% endfor %}
+            </ul>
+            {% endif %}
+        </div>
+        {% if muralDetails['prevmuralid'] != None: %}
+        <p><a href="{{ muralDetails['prevmuralid'] }}">Prev</a></p>
+        {% endif %}
 
-<p>{{ muralDetails["title"] }} </p>
-<img style="height: 150px" src="{{ muralDetails['imageurl'] }}">
-
-<p>{{ muralDetails["notes"] }} </p>
-<p>{{ muralDetails["year"] }} </p>
-<p>{{ muralDetails["location"] }} </p>
-
-{% for artist in muralDetails["artists"]: %}
-<a href="/artist/{{ artist['id'] }}"><p>{{artist["name"]}}</p></a>
-{% endfor %}
-
-{% if muralDetails['nextmuralid'] != None: %}
-<a href="{{ muralDetails['nextmuralid'] }}">Next</a>
-{% endif %}
-
-{% if muralDetails['prevmuralid'] != None: %}
-<a href="{{ muralDetails['prevmuralid'] }}">Prev</a>
-{% endif %}
+        {% if muralDetails['nextmuralid'] != None: %}
+        <a href="{{ muralDetails['nextmuralid'] }}">Next</a>
+        {% endif %}
+    </div>
+</div>
 
 {% endblock %}
