--- a/templates/home.html
+++ b/templates/home.html
@@ -1,14 +1,16 @@
 {% extends "header.html" %} {% block content %}
 
 <div class="container text-center">
-    <div class="row row-cols-2">
+    <h1>{{ pageTitle }}</h1>
+    <div class="row row-cols-5">
     {% for mural in murals: %}
-    <div class="card" style="width: 15rem">
+    <div class="card">
         <div class="col">
-            <a href="murals/{{ mural['id'] }}">
-            <img class="card-img-top"  src="{{ mural['imageurl'] }}">
+            <a style="text-decoration: none;" href="/murals/{{ mural['id'] }}">
+            <img class="card-img-top" src="{{ mural['primaryimage'] }}">
             <div class="card-body">
                 <p>{{ mural['title'] }}</p>
+                <p>({{ mural['year'] }})</p>
             </div>
             </div>
         </a>
