--- a/templates/admin.html
+++ b/templates/admin.html
@@ -25,12 +25,12 @@
                       <div class="form-check">
                           <input class="form-check-input" type="checkbox" id="artistKnown" name="artistKnown">
                           <label class="form-check-label" for="artistKnown">
-                              Artists Known?
+                              Group/Artists Known?
                           </label>
                       </div>
                   </div>
                   <div class="mb-3" id="artistsField" style="display:none;">
-                      <label for="artists" class="form-label">Artists</label>
+                      <label for="artists" class="form-label">Artists (Comma Separated)</label>
                       <input type="text" class="form-control" id="artists" name="artists">
                   </div>
                     <div class="mb-3">
@@ -76,6 +76,35 @@
                 {% endfor %}
                 </div>
             </div>          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            Manage Painters
+          </button>
+        </h2> 
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <div class="container text-center">
+              <h1>{{ pageTitle }}</h1>
+                <ul class="list-group list-group">
+                  {% for artist in artists: %}
+                    <li class="list-group-item d-flex justify-content-between align-items-start">
+                      <div class="ms-2 me-auto">
+                        <div>Name: <b>{{ artist["name"] }}</b></div>
+                        {% if artist["notes"] != None %}
+                        <p>Notes: <b>{{ artist["notes"] }}</b></p>
+                        {% endif %}
+                      </div>
+                      <form action="/deleteArtist/{{ artist['id'] }}" method="post" enctype="multipart/form-data">
+                        <button type="submit" class="badge bg-danger rounded-pill">X</button>
+                      </form>
+                    </li>
+                  {% endfor %}
+                </ul>
+              </div>
+          </div>
         </div>
       </div>
     </div>
