--- a/templates/header.html
+++ b/templates/header.html
@@ -7,10 +7,9 @@
     </head>
     <body>
         <nav class="navbar bg-body-secondary">
-            <div class="container-fluid">
+            <div class="container">
                 <a class="navbar-brand" href="/">
-                    <img style="height: 50px" src="https://wmcda.de/static/assets/images/wilson.jpg">
-                    Tunnel Vision
+                    Tunnel Vision: RIT's Overlooked Art Museum
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -18,6 +17,7 @@
                   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">              
                         <a class="nav-link" href="/">Home</a>
+                        <a class="nav-link" href="/about">About</a>
                     </div>
                 </div>
             </div>
