--- a/templates/mural.html
+++ b/templates/mural.html
@@ -22,12 +22,15 @@
                     <div class="carousel-item text-center">
                     {% endif %}
                         <img style="width:100%;" alt="{{ muralDetails['images'][loop.index-1]['alttext'] }}" src="{{ muralDetails['images'][loop.index-1]['imgurl'] }}">
-                        <div class="carousel-caption d-none d-md-block bg-light">
-                            <p class="text-dark">{{ muralDetails['images'][loop.index-1]['caption'] }}</p>
-                        </div>
                     </div>
+                    {% if muralDetails['images'][loop.index-1]['caption'] != None %}
+                    <div class="carousel-caption d-none d-md-block bg-light">
+                        <p class="text-dark">{{ muralDetails['images'][loop.index-1]['caption'] }}</p>
+                    </div>
+                    {% endif %}
                     {% endfor %}
                 </div>
+                
                 {% if muralDetails["images"]|length > 1 %}
                 <button class="carousel-control-prev" type="button" data-bs-target="#muralImagesCaptions" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -51,7 +54,7 @@
             <p>{{ muralDetails["location"] }} </p>
             
             {% if muralDetails["artists"]|length > 0: %}
-            <h3>Artists:</h3>
+            <h3>Painters:</h3>
             <ul>
             {% for artist in muralDetails["artists"]: %}
             <li><a href="/artist/{{ artist['id'] }}">{{artist["name"]}}</a></li>
