--- a/templates/about.html
+++ b/templates/about.html
@@ -37,7 +37,9 @@
         {% endif %}
     </div>
     <h2>What's this all about?</h2>
-    <p>Blah</p>
+    <div class="text-left">
+        <p>"Tunnel Vision" is a project created by <a href="https://wmcda.de">Wilson McDade</a> </p>
+    </div>
 </div>
 
 {% endblock %}
