--- a/templates/header.html
+++ b/templates/header.html
@@ -11,20 +11,20 @@
                 <a class="navbar-brand" href="/">
                     Tunnel Vision: RIT's Overlooked Art Museum
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">              
-                        <a class="nav-link" href="/">Home</a>
-                        <a class="nav-link" href="/about">About</a>
-                    </div>
-                </div>
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="/about">About</a>
+                    </li>
+                    </ul>
+            
             </div>
         </nav>
         <div class="container-lg center mt-4">{% block content %} {% endblock %}</div>
         <div class="text-center">
-            <p><a href="https://github.com/wilsonmcdade/tunnelvision">Find this project on Github</a></p>
+            <p><a href="https://github.com/wilsonmcdade/tunnelvision">Github</a></p>
         </div>
     </body>
 
