--- a/templates/filtered.html
+++ b/templates/filtered.html
@@ -8,17 +8,7 @@
 
 <div class="row row-cols-5">
 {% for mural in murals: %}
-<div class="card">
-    <div class="col">
-        <a style="text-decoration: none;" href="/murals/{{ mural['id'] }}">
-        <img class="card-img-top" src="{{ mural['primaryimage'] }}">
-        <div class="card-body">
-            <p>{{ mural['title'] }}</p>
-            <p>({{ mural['year'] }})</p>
-        </div>
-        </div>
-    </a>
-    </div>
+    {{ muralcard(mural) }}
 {% endfor %}
 </div>
 
