--- a/templates/header.html
+++ b/templates/header.html
@@ -18,32 +18,61 @@
     <head>
         <title>Tunnel Vision</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <style>
+            body {
+                background-color: #e4e4e4;
+            }
+            .navbar {
+                background-color: rgba(0, 0, 0, 0.8);
+            }
+            .navbar a {
+                color: #ffffff;
+            }
+            .navbar .navbar-toggler {
+                color: #ffffff;
+            }
+            .navbar-collapse {
+                flex-grow: 0 !important;
+            }
+            .navbar-brand {
+                font-size: 2rem;
+                margin-top: 0;
+                margin-bottom: 0.5rem;
+                font-weight: 500;
+                line-height: 1.2;
+            }
+        </style>
     </head>
     <body>
-        <nav class="navbar bg-body-secondary">
+        <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="/">
-                    Tunnel Vision: RIT's Overlooked Art Museum
+                    Tunnel <span style="color: rgb(247, 105, 2);">Vision</span>
                 </a>
-                  <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="/about">About</a>
-                    </li>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item active">
+                            <h4>
+                                <a class="nav-link" aria-current="page" href="/">Home</a>
+                            </h4>
+                        </li>
+                        <li class="nav-item">
+                            <h4><a class="nav-link" aria-current="page" href="/about">About</a></h4>
+                        </li>
                     </ul>
-            
+                </div>
             </div>
         </nav>
-        <div class="container-lg center mt-4">{% block content %} {% endblock %}</div>
-        <div class="text-center">
+        <div class="center">{% block content %} {% endblock %}</div>
+        <!-- <div class="text-center">
             <p><a href="https://github.com/wilsonmcdade/tunnelvision">Github</a></p>
-        </div>
+        </div> -->
     </body>
-
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
 </html>
 
 {% endblock %}
