--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -83,44 +83,11 @@
     });
 </script>
 
-<div class="container-fluid p-0">
-    <div id="muralImagesCaptions" class="carousel carousel-full-background slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            {% for image in muralHighlights %}
-                <div class="carousel-item {{ 'active' if loop.index == 1 else '' }}">
-                    <img alt="{{ image['alttext'] }}" src="{{ image['imgurl'] }}">
-                </div>
-            {% endfor %}
-        </div>
-        <div class="banner-text">
-            <h2>{{ pageTitle }}</h2>
-        </div>
-        {% if muralHighlights|length > 1 %}
-            <button class="carousel-control-prev" type="button" data-bs-target="#muralImagesCaptions" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#muralImagesCaptions" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        {% endif %}
+<div class="container text-center">
+    <div class="row row-cols-5">
+        {% for mural in murals %}
+            {{ muralcard(mural) }}
+        {% endfor %}
     </div>
-</div>
-
-<div class="container my-5">
-    <h2>Lorem Ipsum</h2>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </p>
-</div>
-
-<div class="container my-5">
-    <h2>Lorem Ipsum</h2>
-    <p>
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
 </div>
 {% endblock %}
