--- a/templates/header.html
+++ b/templates/header.html
@@ -20,7 +20,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <style>
             body {
-                background-color: #e4e4e4;
+                background-color: rgb(253, 253, 253);
             }
             .navbar {
                 background-color: rgba(0, 0, 0, 0.8);
@@ -62,14 +62,23 @@
                         <li class="nav-item">
                             <h4><a class="nav-link" aria-current="page" href="/about">About</a></h4>
                         </li>
+                        <li class="nav-item">
+                            <h4><a class="nav-link" aria-current="page" href="/catalog">Catalog</a></h4>
+                        </li>
+                        
                     </ul>
+                </div>
+                <div class="d-flex gap-3">
+                    <a class="nav-link" href="https://csh.rit.edu/" target="_blank">
+                        <img src="https://assets.csh.rit.edu/pubsite/csh_logo_square.svg"  style="width: 30px;">
+                    </a>
+                    <a class="nav-link" href="https://github.com/wilsonmcdade/tunnelvision" target="_blank">
+                        <img src="static/images/github.svg" style="width: 30px; filter: invert(1);">
+                    </a>
                 </div>
             </div>
         </nav>
         <div class="center">{% block content %} {% endblock %}</div>
-        <!-- <div class="text-center">
-            <p><a href="https://github.com/wilsonmcdade/tunnelvision">Github</a></p>
-        </div> -->
     </body>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
