--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,4 +1,5 @@
-{% extends "header.html" %} {% block content %}
+{% extends "header.html" %}
+{% block dynamic_content %}
 
 <div class="container">
     <h1>{{ muralDetails["title"] }} </h1>
