--- a/templates/filtered.html
+++ b/templates/filtered.html
@@ -1,4 +1,5 @@
-{% extends "header.html" %} {% block content %}
+{% extends "header.html" %}
+{% block dynamic_content %}
 
 <h1>{{ pageTitle }}: {{ subHeading["name"] }}</h1>
 {% if subHeading["notes"] != None %}
