--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,4 +1,5 @@
-{% extends "header.html" %} {% block content %}
+{% extends "header.html" %}
+{% block dynamic_content %}
 
 <p>Home</p>
 <div class="accordion" id="accordionExample">
