--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -17,19 +17,18 @@
             <form>
                 <div class="row g-3">
                     <div class="col">
-                        <label for="inputYear" class="form-label">Year</label>
                         <input type="text" class="form-control" id="inputYear" placeholder="Enter year">
                     </div>
                     <div class="col">
-                        <label for="inputLocation" class="form-label">Location</label>
                         <input type="text" class="form-control" id="inputLocation" placeholder="Enter location">
                     </div>
                     <div class="col">
-                        <label for="inputPainter" class="form-label">Painter</label>
                         <input type="text" class="form-control" id="inputPainter" placeholder="Enter painter">
                     </div>
+                    <div class="col-auto">
+                        <button type="submit" class="btn btn-primary">Apply</button>
+                    </div>
                 </div>
-                <button type="submit" class="btn btn-primary mt-2">Apply Filter</button>
             </form>
         </div>
         
