--- a/templates/header.html
+++ b/templates/header.html
@@ -52,6 +52,22 @@
             .active h4 a {
                 color: rgb(247, 105, 2);
             }
+
+            .banner-text {
+                position: absolute;
+                bottom: 0;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                z-index: 2;
+                text-align: center;
+                color: white;
+            }
+
+            .banner-value {
+                background: rgba(247, 105, 2, 0.6);
+                padding: 10px;
+                border-radius: 5px;
+            }
         </style>
     </head>
     <body>
