--- a/templates/home.html
+++ b/templates/home.html
@@ -55,22 +55,6 @@
         background: rgba(0,0,0,0.2);
         transition: 0.2s ease;
     }
-
-    .banner-text {
-        position: absolute;
-        bottom: 0;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 2;
-        text-align: center;
-        color: white;
-    }
-
-    .banner-text h2 {
-        background: rgba(247, 105, 2, 0.6);
-        padding: 10px;
-        border-radius: 5px;
-    }
 </style>
 
 <script>
@@ -92,7 +76,7 @@
                 </div>
             {% endfor %}
         </div>
-        <div class="banner-text">
+        <div class="banner-text banner-value">
             <h2>{{ pageTitle }}</h2>
         </div>
         {% if muralHighlights|length > 1 %}
