UI Updates, added search functionality

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,33 +5,14 @@
     <h1>{{ pageTitle }}</h1>
 
     <!-- Just threw together a boilerplate -->
-    {% for image in muralHighlights %}
     <div class="container my-5">
-        <div class="row align-items-center">
-            {% if loop.index is even %}
-                <div class="col-md-6">
-                    <img class="img-fluid" alt="{{ image['alttext'] }}" src="{{ image['imgurl'] }}" style="height: 25rem;">
+        <div class="row align-items-middle align-middle">
+                <div class="col-md-12">
+                        <p>"Tunnel Vision" is created by <a href="https://wmcda.de">Wilson McDade</a> to highlight the tunnels in RIT's residence halls.</p>
+                        <p>Special Thanks to Erin Monahan and Beckett Jensen for helping to make this project possible.</p>
                 </div>
-                <div class="col-md-6">
-                    <h2>What's this all about?</h2>
-                    <div class="text-left">
-                        <p>"Tunnel Vision" is a project created by <a href="https://wmcda.de">Wilson McDade</a></p>
-                    </div>
-                </div>
-            {% else %}
-                <div class="col-md-6">
-                    <h2>What's this all about?</h2>
-                    <div class="text-left">
-                        <p>"Tunnel Vision" is a project created by <a href="https://wmcda.de">Wilson McDade</a></p>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <img class="img-fluid" alt="{{ image['alttext'] }}" src="{{ image['imgurl'] }}" style="height: 25rem;">
-                </div>
-            {% endif %}
         </div>
     </div>
-{% endfor %}
 
 
 </div>
