--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 {% macro muralcard(mural) %}
-<div class="card">
-    <div class="col">
+<div class="card col-lg-2 col-md-6 col-sm-12 col-xs-12">
+    <div>
         <a style="text-decoration: none;" href="/murals/{{ mural['id'] }}">
         <img class="card-img-top" src="{{ mural['primaryimage'] }}">
         <div class="card-body">
@@ -18,13 +18,16 @@
     <head>
         <title>Tunnel Vision</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.png') }}">
+        <meta property="og:title" content="Tunnel Vision" />
+        <meta property="og:description" content="Tunnelvision is an exhibition of RIT's residence hall murals." />
         <style>
             body {
                 background-color: rgb(253, 253, 253);
             }
             
             .content-margin {
-                margin-top: 80px; /* Adjust this margin top to match your header height */
+                margin-top: 100px; /* Adjust this margin top to match your header height */
             }
 
             .navbar {
@@ -42,7 +45,7 @@
             }
 
             .navbar-brand {
-                font-size: 2rem;
+                font-size: 1.5rem;
                 margin-top: 0;
                 margin-bottom: 0.5rem;
                 font-weight: 500;
@@ -82,13 +85,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <h4><a class="nav-link" aria-current="page" href="/">Home</a></h4>
+                            <h4><a class="nav-link" style="font-size: 1.25rem" aria-current="page" href="/">Home</a></h4>
                         </li>
                         <li class="nav-item">
-                            <h4><a class="nav-link" aria-current="page" href="/about">About</a></h4>
+                            <h4><a class="nav-link" style="font-size: 1.25rem" aria-current="page" href="/about">About</a></h4>
                         </li>
                         <li class="nav-item">
-                            <h4><a class="nav-link" aria-current="page" href="/catalog">Catalog</a></h4>
+                            <h4><a class="nav-link" style="font-size: 1.25rem" aria-current="page" href="/catalog">Catalog</a></h4>
                         </li>
                         
                     </ul>
